# thorn

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  llms.txt  thorn.toml
.firecrawl/: docs-x402-network.md  search-cdp-facilitator.json  search-github-x402.json  search-openx402.json  search-x402-addr.json  search-x402-base.json  search-x402-org.json
.firecrawl/ai-honeypot-research/: ai-honeypot.json  conway.json  palisade-honeypot.json
.github/workflows/: deploy.yml
crates/thorn-archive/: Cargo.toml
crates/thorn-archive/src/: lib.rs  r2.rs
crates/thorn-capture/: Cargo.toml
crates/thorn-capture/src/: domains.rs  drain.rs  lib.rs  poison.rs
crates/thorn-chain/: Cargo.toml
crates/thorn-chain/src/: discovery.rs  lib.rs  scanner.rs  tracker.rs
crates/thorn-cli/: Cargo.toml
crates/thorn-cli/src/: api.rs  config.rs  daemon.rs  main.rs
crates/thorn-core/: Cargo.toml
crates/thorn-core/src/: error.rs  types.rs
crates/thorn-db/: Cargo.toml
crates/thorn-db/src/: lib.rs  ops.rs  schema.rs
crates/thorn-detect/: Cargo.toml
crates/thorn-detect/src/: behavioral.rs  content.rs  infra.rs  lib.rs  scoring.rs
crates/thorn-guard/: Cargo.toml
crates/thorn-guard/src/: inject.rs
crates/thorn-honeypot/: Cargo.toml
crates/thorn-honeypot/src/: lib.rs  server.rs  trap.rs
crates/thorn-notify/: Cargo.toml
crates/thorn-notify/src/: lib.rs  ntfy.rs  webhook.rs
thorn-data/: scans.json
