[workspace]
resolver = "2"
members = [
    "crates/thorn-core",
    "crates/thorn-db",
    "crates/thorn-detect",
    "crates/thorn-chain",
    "crates/thorn-honeypot",
    "crates/thorn-guard",
    "crates/thorn-notify",
    "crates/thorn-archive",
    "crates/thorn-capture",
    "crates/thorn-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thorn-core = { path = "crates/thorn-core" }
thorn-db = { path = "crates/thorn-db" }
thorn-detect = { path = "crates/thorn-detect" }
thorn-chain = { path = "crates/thorn-chain" }
thorn-honeypot = { path = "crates/thorn-honeypot" }
thorn-guard = { path = "crates/thorn-guard" }
thorn-notify = { path = "crates/thorn-notify" }
thorn-archive = { path = "crates/thorn-archive" }
thorn-capture = { path = "crates/thorn-capture" }

slither-core = { git = "https://github.com/plyght/slither", branch = "master" }
snake = { git = "https://github.com/plyght/slither", branch = "master" }
fang = { git = "https://github.com/plyght/slither", branch = "master" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "rustls-tls", "json"], default-features = false }
url = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rusqlite = { version = "0.38", features = ["bundled"] }
base64 = "0.22"
rust-s3 = "0.37"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
