[package]
name = "thorn-archive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thorn-core = { workspace = true }
rust-s3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
