[package]
name = "thorn-chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thorn-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
