[package]
name = "thorn-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thorn-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
